@@ -1,3 +1,9 @@
+Wed Apr 01 12:40:42 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* flax/searchserver/application.py,flax/searchserver/controller.py,
+	  flax/searchserver/dbutils.py: Changes to database storage to
+	  allow any character in the database name.
+
 Sun Mar 29 08:09:50 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* runserver.py,settings.py: Add settings['server_bind_address'] to
